src/tests/snapshots/rs_handstrength__tests__can_have_str__tests__can_str4.snap
---
source: src/tests/can_have_str.rs
expression: str_combis
---
[
    (
        [
            Card {
                value: 14,
                suit: S,
            },
            Card {
                value: 11,
                suit: C,
            },
            Card {
                value: 10,
                suit: C,
            },
        ],
        [
            [
                [
                    Card {
                        value: 12,
                        suit: A,
                    },
                    Card {
                        value: 13,
                        suit: A,
                    },
                ],
            ],
        ],
    ),
    (
        [
            Card {
                value: 3,
                suit: H,
            },
            Card {
                value: 2,
                suit: S,
            },
            Card {
                value: 1,
                suit: S,
            },
        ],
        [
            [
                [
                    Card {
                        value: 4,
                        suit: A,
                    },
                    Card {
                        value: 5,
                        suit: A,
                    },
                ],
            ],
        ],
    ),
]
